--- a/main.tex
+++ b/main.tex
@@ -116,8 +116,8 @@
 
 \title{\textbf{Iowa State University
 \\{\Large Aerospace Engineering}}}
-\subtitle{AERE 361 Lab (Number) Report}
-\author{FirstName LastName}
+\subtitle{AERE 361 Lab 1 Report}
+\author{John Ackert}
 
 \begin{document}
 \maketitle
